# poke-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUBMISSION.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  pypi-release.yaml  semantic-pr.yaml
_responses/: generation.json  pokemon.json
docs/: PYPI_SETUP.md
examples/generation/: cache_demo_sync.py  get_generation_async.py  get_generation_sync.py  search_generation_sync.py
examples/pokedex/: pokedex_basic_example.py  pokedex_sync_example.py
examples/pokemon/: auto_pagination_async.py  auto_pagination_sync.py  cache_demo_async.py  cache_demo_sync.py  expand_pokemon_example.py  get_pokemon_async.py  get_pokemon_sync.py  list_pokemon_sync.py  pagination_demo_async.py  pagination_demo_sync.py  search_pokemon_async.py  search_pokemon_sync.py
src/poke_api/: __init__.py  _client.py  _exceptions.py  _resource.py  _types.py  expansion.py  pagination.py
src/poke_api/resources/: __init__.py  generation.py  pokedex.py  pokemon.py  search.py
src/poke_api/types/: __init__.py  generation.py  pokedex.py  pokemon.py
tests/: test_client_exceptions.py  test_deduplication.py  test_exceptions.py  test_expand.py  test_integration.py  test_pokedex_detail.py  test_pokedex_rankings.py  test_pokemon_unit.py
