[tool.poetry]
name = "poke-sdk"
version = "0.1.0"
description = "A minimal Python SDK for the PokeAPI"
authors = ["pprunty <patrickprunty.business@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pprunty/poke-sdk"
repository = "https://github.com/pprunty/poke-sdk"
documentation = "https://github.com/pprunty/poke-sdk#readme"
keywords = ["pokemon", "pokeapi", "sdk", "api", "async", "http"]
packages = [{include = "poke_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.0"
pydantic = "^2.0.0"
cachetools = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
